--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -3,11 +3,12 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
    <script src="resources/navbar.js"></script>
     <link rel="stylesheet" href="resources/navbar.css"></link>
-
-
+     <link rel="stylesheet" href="resources/main.css"></link>
+     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 <head>
 </head>
   <body>
+    <h1>Future Title</h1>
     <div clas="search">
       <form action="http://www.example.com">
         <input type="text" name="search" placeholder"What you got......"/>
