--- a/final/templates/searchResults.html
+++ b/final/templates/searchResults.html
@@ -1,5 +1,8 @@
 <html>
-<head></head>
+<head>
+
+  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+</head>
 <body>
   <div class="store_nav">
         <div id="disappear_ul">
