Changed the nav bar

--- a/final/static_folder/main.css
+++ b/final/static_folder/main.css
@@ -6,3 +6,8 @@ html {
   color: #444444;
   font-family: 'Quicksand', sans-serif;
 }
+.search {
+  margin: 0 auto;
+  text-align: center;
+  padding: 100px;
+}
