--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -9,7 +9,7 @@
 </head>
   <body>
     <h1>Future Title</h1>
-    <div clas="search">
+    <div class="search">
       <form action="http://www.example.com">
         <input type="text" name="search" placeholder"What you got......"/>
         <input type="submit" value="Add To My Fridge"/>
@@ -24,13 +24,13 @@
           <a href="/">Home</a>
         </div>
         <div id="recipes">
-          <a href="/restaurants">Recipes</a>
+          <a href="/search">Recipes</a>
         </div>
         <div id="map">
           <a href="/restaurants">Map</a>
         </div>
         <div id="fridge">
-          <a href="/restaurants">My Refrigerator</a>
+          <a href="/fridge">My Refrigerator</a>
         </div>
       </div>
     </div>
