--- a/final/templates/aboutUs.html
+++ b/final/templates/aboutUs.html
@@ -27,13 +27,13 @@
           <a href="/">Home</a>
         </div>
         <div id="recipes">
-          <a href="/restaurants">Recipes</a>
+          <a href="/search">Recipes</a>
         </div>
         <div id="map">
           <a href="/restaurants">Map</a>
         </div>
         <div id="fridge">
-          <a href="/restaurants">My Refrigerator</a>
+          <a href="/fridge">My Refrigerator</a>
         </div>
       </div>
     </div>
