--- a/final/templates/restaurants.html
+++ b/final/templates/restaurants.html
@@ -1,26 +1,26 @@
 <html>
-<head></head>
-<body>
-  <div class="store_nav">
-        <div id="disappear_ul">
-          <div id="about">
-            <a href="/about-us">About us</a>
-          </div>
-          <div id="home">
-            <a href="/">Home</a>
-          </div>
-          <div id="recipes">
-            <a href="/restaurants">Recipes</a>
-          </div>
-          <div id="map">
-            <a href="/restaurants">Map</a>
-          </div>
-          <div id="fridge">
-            <a href="/restaurants">My Refrigerator</a>
-          </div>
-        </div>
-      </div>
-      <div style="clear:both;"></div>
-
-</body>
+  <head>
+    <title>Place searches</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
+    <script src="resources/restaurants.js"></script>
+  </head>
+  <body>
+    <div id="map"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAY0XzserzTUvRDFtJDWU_ex-a6IJ7dlEw&libraries=places&callback=initMap" async defer></script>
+    <!DOCTYPE html>
+  </body>
 </html>
