--- a/final/templates/restaurants.html
+++ b/final/templates/restaurants.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html>
-<<<<<<< HEAD
   <head>
-    <title>Place searches</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <script src="resources/restaurants.js"></script>
     <meta charset="utf-8">
+    <title>Place search pagination</title>
     <style>
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
@@ -16,41 +17,71 @@
         margin: 0;
         padding: 0;
       }
+      #right-panel {
+        font-family: 'Roboto','sans-serif';
+        line-height: 30px;
+        padding-left: 10px;
+      }
+
+      #right-panel select, #right-panel input {
+        font-size: 15px;
+      }
+
+      #right-panel select {
+        width: 100%;
+      }
+
+      #right-panel i {
+        font-size: 12px;
+      }
+      #right-panel {
+        font-family: Arial, Helvetica, sans-serif;
+        position: absolute;
+        right: 5px;
+        top: 60%;
+        margin-top: -195px;
+        height: 330px;
+        width: 200px;
+        padding: 5px;
+        z-index: 5;
+        border: 1px solid #999;
+        background: #fff;
+      }
+      h2 {
+        font-size: 22px;
+        margin: 0 0 5px 0;
+      }
+      ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        height: 271px;
+        width: 200px;
+        overflow-y: scroll;
+      }
+      li {
+        background-color: #f1f1f1;
+        padding: 10px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+      }
+      li:nth-child(odd) {
+        background-color: #fcfcfc;
+      }
+      #more {
+        width: 100%;
+        margin: 5px 0 0 0;
+      }
     </style>
-    <script src="resources/restaurants.js"></script>
   </head>
   <body>
     <div id="map"></div>
+    <div id="right-panel">
+      <h2>Results</h2>
+      <ul id="places"></ul>
+      <button id="more">More results</button>
+    </div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAY0XzserzTUvRDFtJDWU_ex-a6IJ7dlEw&libraries=places&callback=initMap" async defer></script>
-    <!DOCTYPE html>
   </body>
-=======
-<head>
-
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-</head>
-<body>
-  <div class="store_nav">
-        <div id="disappear_ul">
-          <div id="about">
-            <a href="/about-us">About us</a>
-          </div>
-          <div id="home">
-            <a href="/">Home</a>
-          </div>
-          <div id="recipes">
-          <a href="/search">Recipes</a>
-          </div>
-          <div id="map">
-            <a href="/restaurants">Map</a>
-          </div>
-          <div id="fridge">
-            <a href="/fridge">My Refrigerator</a>
-          </div>
-        </div>
-      </div>
-      <div style="clear:both;"></div>
-
-</body>
->>>>>>> 832a588d565eb00e2d27ce0af0ca91961c4eadf5
 </html>
