added navbar to maps(temporary)

--- a/final/templates/restaurants.html
+++ b/final/templates/restaurants.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <script src="resources/restaurants.js"></script>
     <link rel="stylesheet" href="resources/restaurants.css">
+    <link rel="stylesheet" href="resources/navbar.css">
     <meta charset="utf-8">
     <title>Place search pagination</title>
   </head>
@@ -14,6 +15,26 @@
       <ul id="places"></ul>
       <button id="more">More results</button>
     </div>
+    <div class="store_nav">
+      <div id="disappear_ul">
+        <div id="about">
+          <a href="/about-us">About us</a>
+        </div>
+        <div id="home">
+          <a href="/">Home</a>
+        </div>
+        <div id="recipes">
+          <a href="/search">Recipes</a>
+        </div>
+        <div id="map">
+          <a href="/restaurants">Map</a>
+        </div>
+        <div id="fridge">
+          <a href="/fridge">My Refrigerator</a>
+        </div>
+      </div>
+    </div>
+    <div style="clear:both;"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAY0XzserzTUvRDFtJDWU_ex-a6IJ7dlEw&libraries=places&callback=initMap" async defer></script>
   </body>
 </html>
