--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -14,9 +14,9 @@
   <body>
     <h1>Future Title</h1>
     <div class="search">
-      <form action="http://www.example.com">
+      <form action="/restaurants">
         <input type="text" name="search" placeholder"What you got......"/>
-        <input type="submit" value="Add To My Fridge"/>
+        <input type="submit" value="Add To My Fridge" />
       </form>
     </div>
 
