--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -19,6 +19,9 @@
         <input type="submit" value="Add To My Fridge"/>
       </form>
     </div>
+    <div id="login">
+      <a href="/login">Login</a>
+    </div>
 
     <div class="store_nav">
       <div id="disappear_ul">
