--- a/final/static_folder/navbar.css
+++ b/final/static_folder/navbar.css
@@ -20,6 +20,16 @@
   padding-right: 100px;
   margin: 0px;
 }
+#login a {
+  float: right;
+  list-style-type: none;
+  font-size: 15px;
+  background-color: #444444;
+  padding: 5px;
+  padding-left: 80px;
+  padding-right: 80px;
+  margin-right: 20px;
+}
 #disappear_ul a:hover {
   display: inline-block;
   background-color: gray;
