--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -5,22 +5,21 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <script src="resources/navbar.js"></script>
     <link rel="stylesheet" href="resources/navbar.css"></link>
-
+    <link rel="stylesheet" href="resources/main.css"></link>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   </head>
-     <link rel="stylesheet" href="resources/main.css"></link>
-     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 <head>
 </head>
   <body>
+    <div id="login">
+      <a href="/login">Login</a>
+    </div></br></br>
     <h1>Future Title</h1>
     <div class="search">
       <form action="/restaurants">
         <input type="text" name="search" placeholder"What you got......"/>
         <input type="submit" value="Add To My Fridge" />
       </form>
-    </div>
-    <div id="login">
-      <a href="/login">Login</a>
     </div>
 
     <div class="store_nav">
