got recipes to work!

--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -14,7 +14,7 @@
   <body>
     <h1>Future Title</h1>
     <div class="search">
-      <form action="/restaurants">
+      <form action="/search">
         <input type="text" name="search" placeholder"What you got......"/>
         <input type="submit" value="Add To My Fridge" />
       </form>
