--- a/final/templates/aboutUs.html
+++ b/final/templates/aboutUs.html
@@ -17,7 +17,7 @@
     <div id="info">
       <h3>Patrycja</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent massa ante, posuere eget condimentum tempor, commodo gravida purus. Pellentesque consectetur suscipit leo, quis mattis justo commodo sed. Aenean in odio at nulla bibendum viverra. Praesent dictum nunc a felis euismod, eu mattis nibh posuere. Duis venenatis vulputate turpis, a tincidunt est cursus sit amet. Pellentesque magna orci, scelerisque id tristique vitae, dictum ut ante. Mauris vitae ligula dui. Mauris pretium lacinia luctus.</p>
-    </div>
+    </div></br></br>
     <div class="store_nav">
       <div id="disappear_ul">
         <div id="about">
