--- a/final/static_folder/final/static_folder/navbar.css
+++ b/final/static_folder/final/static_folder/navbar.css
@@ -14,32 +14,18 @@
   float: left;
   list-style-type: none;
   font-size: 20px;
-  background-color: #444444;
+  background-color: grey;
   padding: 5px;
-  padding-left: 100px;
-  padding-right: 100px;
+  padding-left: 107px;
+  padding-right: 107px;
   margin: 0px;
-}
-#login a {
-  float: right;
-  list-style-type: none;
-  font-size: 15px;
-  background-color: #444444;
-  padding: 5px;
-  padding-left: 80px;
-  padding-right: 80px;
-  margin-right: 20px;
 }
 #disappear_ul a:hover {
   display: inline-block;
-  background-color: gray;
+  background-color: lightblue;
   color: black;
 }
 #popdown:hover {
-  background-color: gray;
+  background-color: lightblue;
   color: black;
-}
-.store_nav a {
-  text-decoration: none;
-  color: #fba67d;
 }
