added to main handler

--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -16,8 +16,8 @@
     </div></br></br>
     <h1>Future Title</h1>
     <div class="search">
-      <form action="/search">
-        <input type="text" name="search" placeholder"What you got......"/>
+      <form>
+        <input type="text" name="ingredient" placeholder"What you got......"/>
         <input type="submit" value="Add To My Fridge" />
       </form>
     </div>
