--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -15,13 +15,11 @@
       <a href="/login">Login</a>
     </div></br></br>
     <h1>Future Title</h1>
-    <div class="search">
-      <form action="/search">
-        <input type="text" name="search" placeholder"What you got......"/>
-        <input type="submit" value="Add To My Fridge" />
-      </form>
-    </div>
-
+    <h2 id="fridge">Refrigerator:</h2>
+    <div id="add">
+      <a href="/">add item</a>
+    </div></br></br>
+    <div style="clear:both;"></div>
     <div class="store_nav">
       <div id="disappear_ul">
         <div id="home">
