--- a/final/static_folder/navbar.css
+++ b/final/static_folder/navbar.css
@@ -24,11 +24,26 @@
   float: right;
   list-style-type: none;
   font-size: 15px;
+  border-radius: 25px;
   background-color: #444444;
   padding: 5px;
   padding-left: 80px;
   padding-right: 80px;
   margin-right: 20px;
+}
+#fridge {
+  float: left;
+}
+#add a {
+  float: right;
+  list-style-type: none;
+  font-size: 15px;
+  border-radius: 25px;
+  background-color: #444444;
+  margin-top: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-right:  1170px;
 }
 #disappear_ul a:hover {
   display: inline-block;
