--- a/final/static_folder/search.css
+++ b/final/static_folder/search.css
@@ -9,8 +9,8 @@ html {
   border-color: #444444;
   display: inline-block;
   width: 45%;
-  text-align:center;
-  margin-left: 10px;
+  margin: 0 auto;
+  text-align: center;
 }
 h1 {
   text-align: center;
