--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -16,9 +16,16 @@
     </div></br></br>
     <h1>Future Title</h1>
     <h2 id="fridge">Refrigerator:</h2>
-    <div id="add">
-      <a href="/">add item</a>
-    </div></br></br>
+
+    <div id="add">add item</div>
+
+    <div id="input">
+      <form action="">
+        <input name="search" type="text">
+        <input type="submit">
+      </form>
+    </div>
+
     <div style="clear:both;"></div>
     <div class="store_nav">
       <div id="disappear_ul">
