--- a/final/templates/restaurants.html
+++ b/final/templates/restaurants.html
@@ -27,7 +27,7 @@
           <a href="/restaurants">Map</a>
         </div>
         <div id="fridge">
-          <a href="/fridge">My Refrigerator</a>
+          <a href="/">My Refrigerator</a>
         </div>
         <div id="about">
           <a href="/about-us">About us</a>
