--- a/final/templates/restaurants.html
+++ b/final/templates/restaurants.html
@@ -5,16 +5,14 @@
     <script src="resources/restaurants.js"></script>
     <link rel="stylesheet" href="resources/restaurants.css">
     <link rel="stylesheet" href="resources/navbar.css">
+    <!-- <script src="resources/location.js"></script> -->
     <meta charset="utf-8">
     <title>Place search pagination</title>
   </head>
   <body>
-    <div id="map"></div>
-    <div id="right-panel">
-      <h2>Results</h2>
-      <ul id="places"></ul>
-      <button id="more">More results</button>
-    </div>
+    <title>Geolocation</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
     <div class="store_nav">
       <div id="disappear_ul">
         <div id="home">
