--- a/final/static_folder/restaurants.css
+++ b/final/static_folder/restaurants.css
@@ -6,9 +6,10 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+  background-color: #fba67d;
 }
 #right-panel {
-  font-family: 'Roboto','sans-serif';
+  font-family: 'Quicksand',sans-serif;
   line-height: 30px;
   padding-left: 10px;
 }
@@ -22,7 +23,7 @@ html, body {
   font-size: 12px;
 }
 #right-panel {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Quicksand',sans-serif;
   position: absolute;
   right: 5px;
   top: 60%;
