--- a/final/templates/restaurants.html
+++ b/final/templates/restaurants.html
@@ -5,14 +5,18 @@
     <script src="resources/restaurants.js"></script>
     <link rel="stylesheet" href="resources/restaurants.css">
     <link rel="stylesheet" href="resources/navbar.css">
-    <!-- <script src="resources/location.js"></script> -->
-    <meta charset="utf-8">
-    <title>Place search pagination</title>
-  </head>
-  <body>
     <title>Geolocation</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
+  </head>
+  <body>
+    <div id="map"></div>
+    <div id="right-panel">
+      <h2>Results</h2>
+      <ul id="places"></ul>
+      <button id="more">More results</button>
+    </div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAY0XzserzTUvRDFtJDWU_ex-a6IJ7dlEw&libraries=places&callback=initMap" async defer></script>
     <div class="store_nav">
       <div id="disappear_ul">
         <div id="home">
@@ -33,6 +37,5 @@
       </div>
     </div>
     <div style="clear:both;"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAY0XzserzTUvRDFtJDWU_ex-a6IJ7dlEw&libraries=places&callback=initMap" async defer></script>
   </body>
 </html>
