--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -39,7 +39,7 @@
     <div id="input">
       <form action="">
         <input name="ingredient" type="text">
-        <input type="submit">
+        <!-- <input type="submit"> -->
       </form>
     </div>
     <div id="items">
