--- a/final/static_folder/navbar.css
+++ b/final/static_folder/navbar.css
@@ -8,8 +8,8 @@
   font-size: 20px;
   background-color: #444444;
   padding: 5px;
-  padding-left: 100px;
-  padding-right: 100px;
+  padding-left: 143px;
+  padding-right: 143px;
   margin: 0px;
 }
 #login a {
@@ -47,7 +47,7 @@
   background-color: gray;
   color: black;
 }
-#login:hover {
+#login a:hover {
   background-color: gray;
   color: black;
 }
