--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -32,23 +32,24 @@
       </div>
     </div>
     <div style="clear:both;"></div>
-    <h2 id="fridge">Refrigerator:</h2>
+    <div id="food_list">
+      <h2 id="fridge">Refrigerator:</h2>
 
-    <div id="add">add item</div>
-    <div style="clear:both;"></div>
-    <div id="input">
-      <form action="">
-        <input name="ingredient" type="text">
-        <!-- <input type="submit"> -->
-      </form>
+      <div id="add">add item</div>
+      <div style="clear:both;"></div>
+      <div id="input">
+        <form action="">
+          <input name="ingredient" type="text">
+        </form>
+      </div>
+      <div id="items">
+        {%for item in fridge_items%}
+          <ul>
+            <li>{{item}}</li>
+          </ul>
+        {%endfor%}
+      </div></br></br>
+      <div style="clear:both;"></div>
     </div>
-    <div id="items">
-      {%for item in fridge_items%}
-        <ul>
-          <li>{{item}}</li>
-        </ul>
-      {%endfor%}
-    </div></br></br>
-    <div style="clear:both;"></div>
   </body>
 </html>
