--- a/final/templates/restaurants.html
+++ b/final/templates/restaurants.html
@@ -5,6 +5,7 @@
     <script src="resources/restaurants.js"></script>
     <link rel="stylesheet" href="resources/restaurants.css">
     <link rel="stylesheet" href="resources/navbar.css">
+    <link rel="stylesheet" href="resources/main.css"></link>
     <title>Geolocation</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
