--- a/final/templates/searchFailed.html
+++ b/final/templates/searchFailed.html
@@ -4,6 +4,7 @@
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <link rel="stylesheet" href="resources/navbar.css"></link>
   <link rel="stylesheet" href="resources/search.css"></link>
+  <link rel="stylesheet" href="resources/main.css"></link>
 
 </head>
 <body>
