--- a/final/static_folder/main.css
+++ b/final/static_folder/main.css
@@ -1,10 +1,12 @@
 h1 {
   text-align: center;
+  font-size: 50px;
 }
 html {
-  background-color: #fba67d;
+  /*background-color: #fba67d;*/
   color: #444444;
   font-family: 'Quicksand', sans-serif;
+  background-image: url(http://www.designbolts.com/wp-content/uploads/2012/12/Straws-Tileable-Pattern-For-Website-Background.jpg);
 }
 .search {
   margin: 0 auto;
