--- a/final/templates/aboutUs.html
+++ b/final/templates/aboutUs.html
@@ -2,6 +2,7 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link rel="stylesheet" href="resources/navbar.css"></link>
+    <link rel="stylesheet" href="resources/main.css"></link>
     <link rel="stylesheet" href="resources/aboutUs.css">
   </head>
   <body>
