cleaned up code

--- a/final/templates/aboutUs.html
+++ b/final/templates/aboutUs.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-    <link rel="stylesheet" href="resources/navbar.css"></link>
-    <link rel="stylesheet" href="resources/main.css"></link>
+    <link rel="stylesheet" href="resources/navbar.css">
+    <link rel="stylesheet" href="resources/main.css">
     <link rel="stylesheet" href="resources/aboutUs.css">
   </head>
   <body>
