--- a/final/templates/restaurants.html
+++ b/final/templates/restaurants.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <script src="resources/restaurants.js"></script>
     <link rel="stylesheet" href="resources/restaurants.css">
+    <link rel="stylesheet" href="resources/main.css">
     <link rel="stylesheet" href="resources/navbar.css">
-    <link rel="stylesheet" href="resources/main.css"></link>
+    <script src="resources/restaurants.js"></script>
     <title>Geolocation</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
@@ -34,6 +33,5 @@
         </div>
       </div>
     </div>
-    <div style="clear:both;"></div>
   </body>
 </html>
