--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -2,10 +2,9 @@
 <html>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <script src="resources/navbar.js"></script>
-    <link rel="stylesheet" href="resources/navbar.css"></link>
-    <link rel="stylesheet" href="resources/main.css"></link>
+    <link rel="stylesheet" href="resources/navbar.css">
+    <link rel="stylesheet" href="resources/main.css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   </head>
 <head>
