--- a/final/templates/searchResults.html
+++ b/final/templates/searchResults.html
@@ -2,9 +2,9 @@
 <head>
 
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-  <link rel="stylesheet" href="resources/navbar.css"></link>
-  <link rel="stylesheet" href="resources/search.css"></link>
-  <link rel="stylesheet" href="resources/main.css"></link>
+  <link rel="stylesheet" href="resources/navbar.css">
+  <link rel="stylesheet" href="resources/search.css">
+  <link rel="stylesheet" href="resources/main.css">
 
 </head>
 <body>
