--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -12,7 +12,7 @@
 </head>
   <body>
     <div id="login">
-      <a href="/login">Login</a>
+      <a href="/login">{{logon}}</a>
     </div></br></br>
     <h1>Future Title</h1>
     <div class="store_nav">
