login/logout on all pages

--- a/final/templates/aboutUs.html
+++ b/final/templates/aboutUs.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="resources/aboutUs.css">
   </head>
   <body>
+    <div id="login">
+      <a href="/login">{{logon}}</a>
+    </div></br></br>
     <h1>About Us</h1>
     <div class="store_nav">
       <div id="disappear_ul">
