--- a/final/templates/searchFailed.html
+++ b/final/templates/searchFailed.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="resources/main.css">
   </head>
   <body>
+    <div id="login">
+      <a href="/login">{{logon}}</a>
+    </div></br></br>
     <h1>Our Future Title</h1>
     <div class="store_nav">
       <div id="disappear_ul">
