--- a/final/templates/restaurants.html
+++ b/final/templates/restaurants.html
@@ -10,6 +10,9 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <div id="login">
+      <a href="/login">{{logon}}</a>
+    </div></br></br>
     <div id="map"></div>
     <div id="right-panel">
       <h2>Results</h2>
