--- a/final/static_folder/aboutUs.css
+++ b/final/static_folder/aboutUs.css
@@ -10,6 +10,7 @@ h1 {
   padding: 10px;
   padding-top: 0px;
   border-style: ridge;
+  background-color: #FBB5A3;
 }
 #info h3 {
   text-align: center;
