--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -13,7 +13,7 @@
     <div id="login">
       <a href="/login">{{logon}}</a>
     </div></br></br>
-    <h1>Future Title</h1>
+    <h1>MyFridge</h1>
     <div class="store_nav">
       <div id="disappear_ul">
         <div id="home">
