CSS and map changes

--- a/final/static_folder/restaurants.css
+++ b/final/static_folder/restaurants.css
@@ -2,18 +2,20 @@
  * element that contains the map. */
 #map {
   height: 80%;
+  width: 85%;
 }
 /* Optional: Makes the sample page fill the window. */
 html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #fba67d;
+  background-image: url(http://www.designbolts.com/wp-content/uploads/2012/12/Straws-Tileable-Pattern-For-Website-Background.jpg);
 }
 #right-panel {
   font-family: 'Quicksand',sans-serif;
   line-height: 30px;
   padding-left: 10px;
+
 }
 
 #right-panel select, #right-panel input {
@@ -32,8 +34,8 @@ html, body {
   position: absolute;
   right: 5px;
   top: 60%;
-  margin-top: -195px;
-  height: 330px;
+  margin-top: -253px;
+  height: 78%;
   width: 200px;
   padding: 5px;
   z-index: 5;
@@ -48,7 +50,7 @@ ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
-  height: 271px;
+  height: 85%;
   width: 200px;
   overflow-y: scroll;
 }
@@ -63,6 +65,6 @@ li:nth-child(odd) {
   background-color: #fcfcfc;
 }
 #more {
-  width: 100%;
+  width: 90%;
   margin: 5px 0 0 0;
 }
