--- a/final/templates/restaurants.html
+++ b/final/templates/restaurants.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="resources/restaurants.css">
     <link rel="stylesheet" href="resources/main.css">
     <link rel="stylesheet" href="resources/navbar.css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <script src="resources/restaurants.js"></script>
     <title>Geolocation</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
@@ -13,6 +14,7 @@
     <div id="login">
       <a href="/login">{{logon}}</a>
     </div></br></br>
+    <h1>Future Title</h1>
     <div id="map"></div>
     <div id="right-panel">
       <h2>Results</h2>
@@ -20,6 +22,9 @@
       <button id="more">More results</button>
     </div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAY0XzserzTUvRDFtJDWU_ex-a6IJ7dlEw&libraries=places&callback=initMap" async defer></script>
+
+    <div style="clear:both;"></div></br></br>
+
     <div class="store_nav">
       <div id="disappear_ul">
         <div id="home">
@@ -36,5 +41,6 @@
         </div>
       </div>
     </div>
+    <div style="clear:both;"></div></br></br>
   </body>
 </html>
