More messages if you're not signed in, login/logout fixed

--- a/final/templates/searchFailed.html
+++ b/final/templates/searchFailed.html
@@ -30,7 +30,7 @@
 
     <div id="searchResults">
       <div>
-        <h3>Not able to fetch recipes</h3>
+        <h3 id="failed">{{loginOrFail}}</h3>
       </div>
     </div>
 
