--- a/final/static_folder/restaurants.css
+++ b/final/static_folder/restaurants.css
@@ -2,6 +2,7 @@
  * element that contains the map. */
 #map {
   height: 80%;
+  width:
 }
 /* Optional: Makes the sample page fill the window. */
 html, body {
