--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -43,7 +43,7 @@
       <div id="items">
         {%for item in fridge_items%}
           <ul>
-            <li>{{item}}</li>
+            <li id="item_info">{{item}}</li>
           </ul>
         {%endfor%}
       </div></br></br>
