--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -17,7 +17,7 @@
     <div class="store_nav">
       <div id="disappear_ul">
         <div id="home">
-          <a href="/">Home</a>
+          <a href="">Home</a>
         </div>
         <div id="recipes">
           <a href="/search">Recipes</a>
