--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -33,7 +33,7 @@
     <div style="clear:both;"></div>
     <div id="food_list">
       <h2 id="fridge">Refrigerator:</h2>
-      <div id="add">add item</div>
+      <div id="add"><input type="submit" value="Submit">add item</div>
       <div style="clear:both;"></div>
       <div id="input">
         <form action="">
