--- a/final/templates/restaurants.html
+++ b/final/templates/restaurants.html
@@ -13,8 +13,7 @@
   <body>
     <div id="login">
       <a href="/login">{{logon}}</a>
-    </div></br></br>
-    <h1>Future Title</h1>
+    </div></br></br></br>
     <div id="map"></div>
     <div id="right-panel">
       <h2>Results</h2>
@@ -41,6 +40,6 @@
         </div>
       </div>
     </div>
-    <div style="clear:both;"></div></br></br>
+    <div style="clear:both;"></div>
   </body>
 </html>
