--- a/final/templates/aboutUs.html
+++ b/final/templates/aboutUs.html
@@ -37,7 +37,7 @@
     </div>
     <div id="info">
       <h3>Patrycja</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent massa ante, posuere eget condimentum tempor, commodo gravida purus. Pellentesque consectetur suscipit leo, quis mattis justo commodo sed. Aenean in odio at nulla bibendum viverra. Praesent dictum nunc a felis euismod, eu mattis nibh posuere. Duis venenatis vulputate turpis, a tincidunt est cursus sit amet. Pellentesque magna orci, scelerisque id tristique vitae, dictum ut ante. Mauris vitae ligula dui. Mauris pretium lacinia luctus.</p>
+      <p>Hey everyone! I'm an incoming freshman at Yale University, and my residential collge there is Pauli Murray College. I plan to study Computer Science and Economics, but I may swap Economics with Data Science. I'm from Hickory Hills, Illinois, but I was born in Przemysl, Poland. I'm excited to start the school year and take more CS classes! </p>
     </div></br></br>
   </body>
 </html>
