--- a/final/templates/aboutUs.html
+++ b/final/templates/aboutUs.html
@@ -29,7 +29,7 @@
     <div style="clear:both;"></div></br></br>
     <div id="info">
       <h3>Stevie</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent massa ante, posuere eget condimentum tempor, commodo gravida purus. Pellentesque consectetur suscipit leo, quis mattis justo commodo sed. Aenean in odio at nulla bibendum viverra. Praesent dictum nunc a felis euismod, eu mattis nibh posuere. Duis venenatis vulputate turpis, a tincidunt est cursus sit amet. Pellentesque magna orci, scelerisque id tristique vitae, dictum ut ante. Mauris vitae ligula dui. Mauris pretium lacinia luctus.</p>
+      <p>Hey! My name is Stevie Askew, and I live in Chicago, Illinois. I am an incoming freshman at Northwestern University (GO CATS!!!), but haven't decided on my major yet. CSSI has taught me everything I know about computer science, and I can't wait to discover more in college. </p>
     </div>
     <div id="info">
       <h3>Dimitri</h3>
