--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -32,8 +32,11 @@
     </div>
     <div style="clear:both;"></div>
     <div id="food_list">
+    </br>
+    <div id="fridgeC">
       <h2 id="fridge">Refrigerator:</h2>
       <div id="add">add item</div>
+    </div>
       <div style="clear:both;"></div>
       <div id="input">
         <form action="">
