Changed titles and added titles on pages

--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="resources/navbar.css">
     <link rel="stylesheet" href="resources/main.css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <title>MyFridge</title>
   </head>
 <head>
 </head>
