--- a/final/templates/searchFailed.html
+++ b/final/templates/searchFailed.html
@@ -4,12 +4,13 @@
     <link rel="stylesheet" href="resources/navbar.css">
     <link rel="stylesheet" href="resources/search.css">
     <link rel="stylesheet" href="resources/main.css">
+    <title>MyFridge</title>
   </head>
   <body>
     <div id="login">
       <a href="/login">{{logon}}</a>
     </div></br></br>
-    <h1>Our Future Title</h1>
+    <h1>Recipes</h1>
     <div class="store_nav">
       <div id="disappear_ul">
         <div id="home">
