--- a/final/templates/aboutUs.html
+++ b/final/templates/aboutUs.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="resources/navbar.css">
     <link rel="stylesheet" href="resources/main.css">
     <link rel="stylesheet" href="resources/aboutUs.css">
+    <title>MyFridge</title>
   </head>
   <body>
     <div id="login">
