--- a/final/templates/restaurants.html
+++ b/final/templates/restaurants.html
@@ -9,6 +9,7 @@
     <title>Geolocation</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
+    <title>MyFridge</title>
   </head>
   <body>
     <div id="login">
