--- a/final/templates/restaurants.html
+++ b/final/templates/restaurants.html
@@ -42,5 +42,6 @@
       </div>
     </div>
     <div style="clear:both;"></div>
+    <!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-59838ceff1fd6d93"></script> 
   </body>
 </html>
