--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -54,5 +54,6 @@
       </div></br></br>
       <div style="clear:both;"></div>
     </div>
+    <!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-59838ceff1fd6d93"></script> 
   </body>
 </html>
