--- a/final/templates/searchFailed.html
+++ b/final/templates/searchFailed.html
@@ -34,6 +34,6 @@
         <h3 id="failed">{{loginOrFail}}</h3>
       </div>
     </div>
-
+    <!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-59838ceff1fd6d93"></script> 
   </body>
 </html>
