--- a/final/templates/aboutUs.html
+++ b/final/templates/aboutUs.html
@@ -34,12 +34,12 @@
     </div>
     <div id="info">
       <h3>Dimitri</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent massa ante, posuere eget condimentum tempor, commodo gravida purus. Pellentesque consectetur suscipit leo, quis mattis justo commodo sed. Aenean in odio at nulla bibendum viverra. Praesent dictum nunc a felis euismod, eu mattis nibh posuere. Duis venenatis vulputate turpis, a tincidunt est cursus sit amet. Pellentesque magna orci, scelerisque id tristique vitae, dictum ut ante. Mauris vitae ligula dui. Mauris pretium lacinia luctus.</p>
+      <p>Whats up! I'm Dimitri and this fall I’ll be studying Computer Science at University of Illinois at Chicago! CSSI has taught me so much and It's pushed my passion for computer science into overdrive. I'm excited to continue my passion for programming and I can't wait to learn more in college.</p>
     </div>
     <div id="info">
       <h3>Patrycja</h3>
       <p>Hey everyone! I'm an incoming freshman at Yale University, and my residential collge there is Pauli Murray College. I plan to study Computer Science and Economics, but I may swap Economics with Data Science. I'm from Hickory Hills, Illinois, but I was born in Przemysl, Poland. I'm excited to start the school year and take more CS classes! </p>
     </div></br></br>
-    <!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-59838ceff1fd6d93"></script> 
+    <!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-59838ceff1fd6d93"></script>
   </body>
 </html>
