minor change to bio

--- a/final/templates/aboutUs.html
+++ b/final/templates/aboutUs.html
@@ -38,7 +38,7 @@
     </div>
     <div id="info">
       <h3>Patrycja</h3>
-      <p>Hey everyone! I'm an incoming freshman at Yale University, and my residential college there is Pauli Murray College. I plan to study Computer Science and Economics, but I may swap Economics with Data Science. I'm from Hickory Hills, Illinois, but I was born in Przemysl, Poland. I'm excited to start the school year and take more CS classes! </p>
+      <p>Hey everyone! I'm an incoming freshman at Yale University. I plan to study Computer Science and Economics, but I may swap Economics with Data Science. I'm from Hickory Hills, Illinois, but I was born in Przemysl, Poland. I'm excited to start the school year and take more CS classes! </p>
     </div></br></br>
     <!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-59838ceff1fd6d93"></script>
   </body>
